# Python_General

./: Blackjack.py  Exercicio POO Pagamentos.py  README.md
Algorithms and Data Structures - Python/Algoritmos/: Dijkstra_Exercicio.ipynb  Josephus_Permutation.py  dijkstra.py
Algorithms and Data Structures - Python/Beecrowd/: 1018_cedulas.py  1098_IJ4.py  1145_logicaseq.py  1171_freqnumeros.py  13_RomantoInteger.py  2381_chamada.py  beecrowd_1467.py
Algorithms and Data Structures - Python/Exercicios Avulsos/: OtimizacaoLeetCodeHashmap.py  ex01_poo.py  megasena.py  permutation.ipynb  ppt_1873.py  sort.ipynb  sort.py
Algorithms and Data Structures - Python/Leetcode/: leetcode1.py  leetcode_17.py  leetcode_testing_17.py
AlgoritmosBeecrowd/: 1018_cedulas.py  1040_mediaponderada.py  1096_seqIJ2.py  1142_PUM.py  1144_sequencialogica.py  1171_freqnumeros.py  BibliotecaOOP.py  beecrowd2591.PY  carropoo.py  leetcode1.py  oop_salario.py  ppt_1873.py
BlackJack/Blackjack/: blackjack_pyqt5.py
BlackJack/Blackjack com interface v1/: blackjack_gui.py  blackjack_gui.spec
BlackJack/Blackjack com interface v2/: blackjack-readme.md
CS50/adieu/: adieu.py
CS50/bank/: bank.py
CS50/bitcoin/: bitcoin.py
CS50/camel/: camel.py
CS50/coke/: coke.py
CS50/deep/: deep.py
CS50/einstein/: einstein.py
CS50/emojize/: emojize.py
CS50/extensions/: extensions.py
CS50/faces/: faces.py
CS50/figlet/: figlet.py
CS50/um/: um.py  (+1 more)
SnakeGame/: Snake_Game.py
case-multiestrategia/: README.md  requirements.txt  schemas.txt
fast-api/: timev.txt
fast-api/fast_zero/: pyproject.toml
(+324 files in other folders)
