[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Luis Santos",email = "luishv551@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.*"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]

[tool.poetry]
packages = [{include = "fast_zero", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
